crates/carta/tests/snapshots/docx__docx__blockquote-loose-list.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:p>
<w:pPr>
<w:pStyle w:val="BlockText" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1001" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">one</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="BlockText" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1001" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">two</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="Compact" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1002" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">a</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="Compact" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1002" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">b</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="BlockText" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1003" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">x</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="BlockText" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1003" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">y</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="DefinitionTerm" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">Term</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="Definition" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1004" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">d1</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="Definition" />
<w:numPr>
<w:ilvl w:val="0" />
<w:numId w:val="1004" />
</w:numPr>
</w:pPr>
<w:r>
<w:t xml:space="preserve">d2</w:t>
</w:r>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
