crates/carta/tests/snapshots/docx__docx__id-normalization.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:bookmarkStart w:id="1" w:name="X85d92d2fc1e757b418d1d0f1d808a71d48ae692" />
<w:p>
<w:pPr>
<w:pStyle w:val="Heading1" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">Heading</w:t>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">See</w:t>
</w:r>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:hyperlink w:anchor="X85d92d2fc1e757b418d1d0f1d808a71d48ae692">
<w:r>
<w:rPr>
<w:rStyle w:val="Hyperlink" />
</w:rPr>
<w:t xml:space="preserve">the heading</w:t>
</w:r>
</w:hyperlink>
<w:r>
<w:t xml:space="preserve">.</w:t>
</w:r>
</w:p>
<w:bookmarkEnd w:id="1" />
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
