crates/carta/tests/snapshots/docx__docx__image-percent-width.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:p>
<w:pPr>
<w:pStyle w:val="CaptionedFigure" />
</w:pPr>
<w:r>
<w:drawing>
<wp:inline>
<wp:extent cx="2667000" cy="1333500" />
<wp:effectExtent l="0" t="0" r="0" b="0" />
<wp:docPr id="10" name="Picture" descr="x" title="" />
<a:graphic>
<a:graphicData uri="http://schemas.openxmlformats.org/drawingml/2006/picture">
<pic:pic>
<pic:nvPicPr>
<pic:cNvPr id="11" name="Picture" descr="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAlgAAAEsCAIAAACQX1rBAAAEyklEQVR4nO3OQQ0AMBAEofVvupUxjyNBAHsbAJzVDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AINQPACDUDwAg1A8AIPQBaVaJ5ZMS1DAAAAAASUVORK5CYII=" />
<pic:cNvPicPr>
<a:picLocks noChangeArrowheads="1" noChangeAspect="1" />
</pic:cNvPicPr>
</pic:nvPicPr>
<pic:blipFill>
<a:blip r:embed="rId9" />
<a:stretch>
<a:fillRect />
</a:stretch>
</pic:blipFill>
<pic:spPr bwMode="auto">
<a:xfrm>
<a:off x="0" y="0" />
<a:ext cx="2667000" cy="1333500" />
</a:xfrm>
<a:prstGeom prst="rect">
<a:avLst />
</a:prstGeom>
<a:noFill />
<a:ln w="9525">
<a:noFill />
<a:headEnd />
<a:tailEnd />
</a:ln>
</pic:spPr>
</pic:pic>
</a:graphicData>
</a:graphic>
</wp:inline>
</w:drawing>
</w:r>
</w:p>
<w:p>
<w:pPr>
<w:pStyle w:val="ImageCaption" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">x</w:t>
</w:r>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
